--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,57 @@
     <groupId>mevuzarot</groupId>
     <artifactId>dspAss1</artifactId>
     <version>1.0-SNAPSHOT</version>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>1.11</source>-->
+<!--                    <target>1.11</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>Manager</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.11</source>
-                    <target>1.11</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
     <dependencies>
 
@@ -47,6 +86,41 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sample</groupId>
+            <artifactId>sample1</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>/home/nadav/Desktop/AWS/src/main/resources/ejml-0.23.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sample</groupId>
+            <artifactId>sample2</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>/home/nadav/Desktop/AWS/src/main/resources/jollyday-0.4.7.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.sample</groupId>
+            <artifactId>sample3</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>/home/nadav/Desktop/AWS/src/main/resources/stanford-corenlp-3.3.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sample</groupId>
+            <artifactId>sample4</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>/home/nadav/Desktop/AWS/src/main/resources/stanford-corenlp-3.3.0-models.jar</systemPath>
+        </dependency>
+
+
+
+
 
     </dependencies>
 
