--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Manager</mainClass>
+                            <mainClass>LocalApplication</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
